--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
 .grid-container {
     display: flex; /*enable flex layout*/
-    flex-wrap: wrap; /*allow items to wrap to multiple rows*/
+    flex-wrap: wrap;
+    box-sizing: border-box;
+    border: 1px solid black;
+    overflow: hidden;
 }
 
 .grid-item { /*style each square div and set size*/
     background-color: white;
-    width: 50px;
-    height: 50px;
+    display: flex;
+    box-sizing: border-box;
     border: 1px solid black;
 }
 
